[gd_scene load_steps=20 format=2]

[ext_resource path="res://Flying.gd" type="Script" id=1]
[ext_resource path="res://cloud.glb" type="PackedScene" id=2]
[ext_resource path="res://X.glb" type="PackedScene" id=3]
[ext_resource path="res://bone.glb" type="PackedScene" id=4]
[ext_resource path="res://Dogs/SKYE.gltf" type="PackedScene" id=5]
[ext_resource path="res://Dogs/MARSHAL.gltf" type="PackedScene" id=6]
[ext_resource path="res://music/PAW_Patrol_Theme.ogg" type="AudioStream" id=7]
[ext_resource path="res://music/bone.ogg" type="AudioStream" id=8]
[ext_resource path="res://music/SKYE.ogg" type="AudioStream" id=9]
[ext_resource path="res://music/MARSHAL.ogg" type="AudioStream" id=10]
[ext_resource path="res://fonts/alphakind/Alphakind.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://music/X.ogg" type="AudioStream" id=12]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.466667, 0.466667, 0.466667, 1 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.466667, 0.466667, 0.466667, 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/alphakind/Alphakind.ttf"

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 4
outline_color = Color( 0.988235, 0.0196078, 0.835294, 1 )
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 60
outline_size = 6
outline_color = Color( 0.988235, 0.905882, 0.0196078, 1 )
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 30
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="ViewportContainerL" type="ViewportContainer" parent="."]
margin_left = -1.0
margin_top = 4.0
margin_right = 221.0
margin_bottom = 225.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportL" type="Viewport" parent="ViewportContainerL"]
size = Vector2( 222, 221 )
handle_input_locally = false
render_target_update_mode = 3

[node name="CameraL" type="Camera" parent="ViewportContainerL/ViewportL"]
transform = Transform( -1, 1.47929e-07, -2.90327e-07, 0, 0.891006, 0.45399, 3.25841e-07, 0.45399, -0.891006, 0, 2, -3 )

[node name="ViewportContainerR" type="ViewportContainer" parent="."]
margin_left = 222.0
margin_top = 4.0
margin_right = 438.0
margin_bottom = 223.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportR" type="Viewport" parent="ViewportContainerR"]
size = Vector2( 216, 219 )
handle_input_locally = false
render_target_update_mode = 3

[node name="CameraR" type="Camera" parent="ViewportContainerR/ViewportR"]
transform = Transform( -1, 1.47929e-07, -2.90327e-07, 0, 0.891006, 0.45399, 3.25841e-07, 0.45399, -0.891006, 0, 2, -3 )

[node name="SCENE" type="Spatial" parent="."]

[node name="CLOUDS" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 3, 0 )

[node name="BorderLeft" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 100, 5, 0, 100 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="BorderRight" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 100, -5, 0, 100 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="SKYE" type="Spatial" parent="."]

[node name="SKYE" parent="SKYE" instance=ExtResource( 5 )]
transform = Transform( 0.0731953, 0, 0, 0, 0.0731953, 0, 0, 0, 0.0731953, 0, -0.561071, 0 )

[node name="MARSHAL" type="Spatial" parent="."]

[node name="MARSHAL" parent="MARSHAL" instance=ExtResource( 6 )]
transform = Transform( 0.0759201, 0, 0, 0, 0.0759201, 0, 0, 0, 0.0759201, 0, -0.563134, 0 )

[node name="Templates" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5, 0, 0 )

[node name="templateX" parent="Templates" instance=ExtResource( 3 )]
transform = Transform( 8.93584e-08, 0.548478, -8.93584e-08, 0, 8.93584e-08, 0.548478, -0.548478, 8.93584e-08, -1.45583e-14, 0, 0, 0 )

[node name="templateBone" parent="Templates" instance=ExtResource( 4 )]
transform = Transform( -3.02991e-08, 0, 0.185975, 0, 0.185975, 0, -0.185975, 0, -3.02991e-08, 0, 0, 0 )

[node name="templateCloud" parent="Templates" instance=ExtResource( 2 )]
transform = Transform( -0.31297, 0, 0, 0, -0.31297, 0, 0, 0, -0.31297, 0, -2, 4 )

[node name="AudioBackground" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.078
autoplay = true

[node name="AudioSKYE" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 9 )

[node name="AudioMARSHAL" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 10 )

[node name="AudioBone" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 8 )

[node name="AudioX" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 12 )

[node name="countSKYE" type="Button" parent="."]
margin_right = 250.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.992157, 0.772549, 0.0313726, 1 )
shortcut_in_tooltip = false
text = "SKYE: 100"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelText" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -39.0
margin_right = 189.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.992157, 0.054902, 0.0313726, 1 )
shortcut_in_tooltip = false
text = "LEVEL 1"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countMARSHAL" type="Button" parent="."]
margin_top = 60.0
margin_right = 250.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
shortcut_in_tooltip = false
text = "MARSHAL: 100"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countTOTAL" type="Button" parent="."]
margin_left = -1.0
margin_top = 120.0
margin_right = 249.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.054902, 0.960784, 0.960784, 1 )
shortcut_in_tooltip = false
text = "TOTAL: 0"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
